--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,11 @@
-/*
+<!--
 Author: Kusuma Murthy
 KUID: 3095756
-Date Created: 10/20/2023
-Lab: Lab 6
-Last modified: 10/22/2023
-Purpose: To write a program that performs matrix operations
-*/
+Date Created: 10/27/2023
+Lab: Lab 7
+Last modified: 10/29/2023
+Purpose: Given by TA; it is the main html page
+-->
 <html>
 
 <head>
