--- a/public_html/practice1.html
+++ b/public_html/practice1.html
@@ -1,3 +1,11 @@
+<!--
+Author: Kusuma Murthy
+KUID: 3095756
+Date Created: 10/27/2023
+Lab: Lab 7
+Last modified: 10/29/2023
+Purpose: To create a profile page using html and css elements
+-->
 <html>
 
 <head>
