--- a/public_html/practice4.html
+++ b/public_html/practice4.html
@@ -1,3 +1,12 @@
+<!--
+Author: Kusuma Murthy
+KUID: 3095756
+Date Created: 10/27/2023
+Lab: Lab 7
+Last modified: 10/29/2023
+Purpose: To create a page takes in user input and provides the user with a matrix table, this uses HTML
+-->
+
 <html>
 
 <head>
@@ -9,6 +18,7 @@
     <form action="practice4.php" method="GET">
         Size of Multiplication Table: <input type="number" name="number">
         <br>
+<!--this functions get recive the user input and sets it to the id's which are used in the php function coded in the practice4.php file-->
         <input type="submit" value="Submit">
     </form>
 </body>
